# glsl-check

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  check.cc  vcpkg.json
